[gd_scene load_steps=11 format=2]

[ext_resource path="res://animations/pitcher/wind_up/f1.png" type="Texture" id=1]
[ext_resource path="res://assets/raw/ball_shadow.png" type="Texture" id=2]
[ext_resource path="res://scenes/actors/fielder.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.51407, 30.1683 )

[sub_resource type="CircleShape2D" id=6]
radius = 28.6024

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0 )
colors = PoolColorArray( 0.32549, 0.862745, 0.87451, 1, 0.647059, 0.898039, 0.898039, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.273864 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.692045 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
trail_divisor = 15
trail_size_modifier = SubResource( 3 )
trail_color_modifier = SubResource( 8 )
emission_shape = 1
emission_sphere_radius = 11.04
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 100, 0 )
initial_velocity = 137.25
initial_velocity_random = 0.42
orbit_velocity = 1.0
orbit_velocity_random = 0.39
linear_accel_random = 0.44
radial_accel_random = 0.23
angle_random = 0.36
scale = 50.75

[node name="fielder" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )

[node name="defender_not_selected" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0.0627451, 0.105882, 0.184314, 1 )
position = Vector2( 1.71661e-05, 0.0771928 )
scale = Vector2( 0.111738, 0.0798125 )
texture = ExtResource( 2 )

[node name="defender_selected" type="Sprite" parent="."]
modulate = Color( 0.54902, 0.831373, 1, 1 )
self_modulate = Color( 0.403922, 0.776471, 1, 1 )
position = Vector2( -0.27018, 0.501775 )
scale = Vector2( 0.106913, 0.0763664 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.614711, -43.0301 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1.16836, -26.0528 )
shape = SubResource( 5 )

[node name="detection" type="Area2D" parent="."]

[node name="ball_pickup_zone" type="CollisionShape2D" parent="detection"]
visible = false
shape = SubResource( 6 )

[node name="has_ball_effect" type="Particles2D" parent="detection"]
visible = false
light_mask = 8
position = Vector2( -1.63008, -2.77738 )
scale = Vector2( 0.75, 0.75 )
amount = 10
speed_scale = 0.5
process_material = SubResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="view_fielder" type="Camera2D" parent="."]
zoom = Vector2( 2, 2 )
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
